[gd_scene load_steps=15 format=3 uid="uid://dafvan80dn320"]

[ext_resource type="Script" uid="uid://bbfij4sxrnctn" path="res://one_v_one.gd" id="1_rioro"]
[ext_resource type="Material" uid="uid://tk8kinc8k4uf" path="res://materials/floor.tres" id="2_rioro"]
[ext_resource type="PackedScene" uid="uid://bsw1jkrbaf653" path="res://sound/bgm.tscn" id="3_0cylr"]

[sub_resource type="BoxMesh" id="BoxMesh_xw411"]
material = ExtResource("2_rioro")
size = Vector3(1000, 0.5, 1000)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_atseg"]
data = PackedVector3Array(-500, 0.25, 500, 500, 0.25, 500, -500, -0.25, 500, 500, 0.25, 500, 500, -0.25, 500, -500, -0.25, 500, 500, 0.25, -500, -500, 0.25, -500, 500, -0.25, -500, -500, 0.25, -500, -500, -0.25, -500, 500, -0.25, -500, 500, 0.25, 500, 500, 0.25, -500, 500, -0.25, 500, 500, 0.25, -500, 500, -0.25, -500, 500, -0.25, 500, -500, 0.25, -500, -500, 0.25, 500, -500, -0.25, -500, -500, 0.25, 500, -500, -0.25, 500, -500, -0.25, -500, 500, 0.25, 500, -500, 0.25, 500, 500, 0.25, -500, -500, 0.25, 500, -500, 0.25, -500, 500, 0.25, -500, -500, -0.25, 500, 500, -0.25, 500, -500, -0.25, -500, 500, -0.25, 500, 500, -0.25, -500, -500, -0.25, -500)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ne5nj"]
sky_horizon_color = Color(0.59625, 0.6135, 0.653186, 1)
ground_bottom_color = Color(0, 0, 0.0627451, 1)
ground_horizon_color = Color(0.59625, 0.6135, 0.653186, 1)

[sub_resource type="Sky" id="Sky_8uoks"]
sky_material = SubResource("ProceduralSkyMaterial_ne5nj")

[sub_resource type="Environment" id="Environment_g42aa"]
background_mode = 2
background_energy_multiplier = 0.01
sky = SubResource("Sky_8uoks")
ambient_light_source = 2
ambient_light_color = Color(0, 0.0705882, 0.227451, 1)
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_bghhw"]
size = Vector3(100, 10, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_g2qvd"]
size = Vector3(100, 10, 420.735)

[sub_resource type="BoxShape3D" id="BoxShape3D_05i0m"]
size = Vector3(5000, 100, 5000)

[sub_resource type="BoxShape3D" id="BoxShape3D_atseg"]
size = Vector3(1100, 100, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_rioro"]
size = Vector3(200, 200, 200)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_atseg"]
height = 50.0
radius = 100.0

[node name="Grid" type="Node3D"]
script = ExtResource("1_rioro")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 150.821, 316.62)
fov = 50.0

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.05668, 0)
mesh = SubResource("BoxMesh_xw411")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_atseg")

[node name="SetDressin" type="Node3D" parent="."]
transform = Transform3D(78.9063, 0, -61.4313, 0, 100, 0, 61.4313, 0, 78.9063, -142.92, 41.5013, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="SetDressin"]
environment = SubResource("Environment_g42aa")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SetDressin"]
transform = Transform3D(-0.990505, 0.119058, -0.0687377, 0, 0.499998, 0.866026, 0.137476, 0.857804, -0.495251, 1.18197, 0.796057, -0.920207)
light_color = Color(0.858824, 0.882353, 1, 1)
light_energy = 0.384
shadow_enabled = true

[node name="Trails" type="Node3D" parent="."]

[node name="Spawns" type="Node3D" parent="."]

[node name="Players" type="Node3D" parent="Spawns"]

[node name="PlayerSpawn" type="Node3D" parent="Spawns/Players"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -2.23, -228.653)

[node name="Enemies" type="Node3D" parent="Spawns"]

[node name="EnemySpawn" type="Node3D" parent="Spawns/Enemies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.23, 272.445)

[node name="Allies" type="Node3D" parent="Spawns"]

[node name="SOS" parent="." instance=ExtResource("3_0cylr")]
volume_db = -22.0
pitch_scale = 0.68
autoplay = false

[node name="BotTurnLeft" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 522.59, 879.475, 729.979)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BotTurnLeft"]
shape = SubResource("BoxShape3D_bghhw")

[node name="BotTurnRight" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 154.206, 879.475, 525.639)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BotTurnRight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -160.367)
shape = SubResource("BoxShape3D_g2qvd")

[node name="ExplodeBox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExplodeBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -168.668, 0)
shape = SubResource("BoxShape3D_05i0m")

[node name="DespawnBox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -566.392, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DespawnBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -100, 0)
shape = SubResource("BoxShape3D_05i0m")

[node name="NPCs" type="Node3D" parent="."]

[node name="Bounds5" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 477.142, 0, 0)
collision_layer = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bounds5"]
shape = SubResource("BoxShape3D_atseg")

[node name="Bounds9" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 21.7904, 6.10352e-05, 472.726)
collision_layer = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bounds9"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0)
shape = SubResource("BoxShape3D_rioro")

[node name="Bounds12" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -69.3512, 6.10352e-05, -474.415)
collision_layer = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bounds12"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0)
shape = SubResource("BoxShape3D_rioro")

[node name="Bounds11" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -545.133, 6.10352e-05, -30.4464)
collision_layer = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bounds11"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0)
shape = SubResource("BoxShape3D_rioro")

[node name="Bounds10" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 502.251, 6.10352e-05, -30.4464)
collision_layer = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bounds10"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0)
shape = SubResource("BoxShape3D_rioro")

[node name="Bounds8" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -477.181, 0, 0)
collision_layer = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bounds8"]
shape = SubResource("BoxShape3D_atseg")

[node name="Bounds7" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -468.133)
collision_layer = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bounds7"]
shape = SubResource("BoxShape3D_atseg")

[node name="Bounds6" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 481.304)
collision_layer = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bounds6"]
shape = SubResource("BoxShape3D_atseg")

[node name="Bounce" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 520.81, 6.10352e-05, 526.504)
collision_layer = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bounce"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("CylinderShape3D_atseg")

[node name="Bounce2" type="Area3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -498.189, 6.10352e-05, -504.816)
collision_layer = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bounce2"]
shape = SubResource("CylinderShape3D_atseg")

[node name="Bounce3" type="Area3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -507.377, -6.10352e-05, 489.411)
collision_layer = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bounce3"]
shape = SubResource("CylinderShape3D_atseg")

[node name="Bounce4" type="Area3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 521.59, -0.00012207, -499.703)
collision_layer = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bounce4"]
shape = SubResource("CylinderShape3D_atseg")

[connection signal="body_entered" from="BotTurnLeft" to="." method="_on_bot_turn_left_body_entered"]
[connection signal="body_entered" from="BotTurnRight" to="." method="_on_bot_turn_right_body_entered"]
[connection signal="body_entered" from="ExplodeBox" to="." method="_on_kill_box_body_entered"]
[connection signal="body_entered" from="DespawnBox" to="." method="_on_despawn_box_body_entered"]
